# trail-coach

./: .gitignore  CLAUDE.md  README.md
backend/: main.py  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: predictions.py  zones.py
backend/app/domain/: effort.py  physiology.py  predictor.py  training_load.py
backend/app/schemas/: prediction.py
backend/tests/: test_effort.py  test_physiology.py  test_predictor.py  test_training_load.py
